--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
         <body>
-                <h1>Jenkins Job</h1>
+                <h1>Jenkins</h1>
                 <p>A website which will be hosted on AWS S3 and the job will be scheduled on jenkins. When ever changes are made on the github repo, the job will automatically reflect the changes in the website hosted on S3.</p>
         </body>
 </html>
